Convert core to Java 8