@@ -21,22 +21,22 @@ final class PolymorphicSerializer implements Serializer<Object, Map<?, ?>> {
     }
 
     private void requireNonBlankProperty() {
-        if (polymorphic.property().isBlank()) {
-            String msg = "The @Polymorphic annotation does not allow a blank property name but " +
-                         "type '%s' uses one.".formatted(polymorphicType.getName());
+        if (polymorphic.property().isEmpty()) {
+            String msg = String.format("The @Polymorphic annotation does not allow a blank property name but " +
+                    "type '%s' uses one.", polymorphicType.getName());
             throw new ConfigurationException(msg);
         }
     }
 
     private void initAliases() {
-        final var polymorphicTypes = polymorphicType.getAnnotation(PolymorphicTypes.class);
+        final PolymorphicTypes polymorphicTypes = polymorphicType.getAnnotation(PolymorphicTypes.class);
 
         if (polymorphicTypes == null)
             return;
 
         for (PolymorphicTypes.Type pType : polymorphicTypes.value()) {
-            final var type = pType.type();
-            final var alias = pType.alias().isBlank() ? type.getName() : pType.alias();
+            final Class<?> type = pType.type();
+            final String alias = pType.alias().isEmpty() ? type.getName() : pType.alias();
 
             requireDistinctAliases(alias);
             requireDistinctTypes(type);
@@ -48,18 +48,16 @@ final class PolymorphicSerializer implements Serializer<Object, Map<?, ?>> {
 
     private void requireDistinctAliases(String alias) {
         if (typeByAlias.containsKey(alias)) {
-            String msg = "The @PolymorphicTypes annotation must not use the same alias for " +
-                         "multiple types. Alias '%s' appears more than once."
-                                 .formatted(alias);
+            String msg = String.format("The @PolymorphicTypes annotation must not use the same alias for multiple types. Alias '%s' appears more than once.",
+                            alias);
             throw new ConfigurationException(msg);
         }
     }
 
     private void requireDistinctTypes(Class<?> type) {
         if (aliasByType.containsKey(type)) {
-            String msg = "The @PolymorphicTypes annotation must not contain multiple " +
-                         "definitions for the same subtype. Type '%s' appears more than once."
-                                 .formatted(type.getName());
+            String msg = String.format("The @PolymorphicTypes annotation must not contain multiple definitions for the same subtype. Type '%s' appears more than once.",
+                    type.getName());
             throw new ConfigurationException(msg);
         }
     }
@@ -70,17 +68,17 @@ final class PolymorphicSerializer implements Serializer<Object, Map<?, ?>> {
         // this cast won't cause any exceptions as we only pass objects of types the
         // serializer expects
         @SuppressWarnings("unchecked")
-        final var serializer = (TypeSerializer<Object, ?>) TypeSerializer.newSerializerFor(
+        final TypeSerializer<Object, ?> serializer = (TypeSerializer<Object, ?>) TypeSerializer.newSerializerFor(
                 elementType,
                 context.properties()
         );
-        final var serialization = serializer.serialize(element);
+        final Map<?, ?> serialization = serializer.serialize(element);
 
         requireSerializationNotContainsProperty(serialization);
 
-        final var result = new LinkedHashMap<>();
+        final Map<String, String> result = new LinkedHashMap<>();
         result.put(polymorphic.property(), getTypeIdentifierByType(elementType));
-        result.putAll(serialization);
+        result.putAll((Map<String, String>) serialization);
         return result;
     }
 
@@ -91,10 +89,9 @@ final class PolymorphicSerializer implements Serializer<Object, Map<?, ?>> {
 
     private void requireSerializationNotContainsProperty(Map<?, ?> serialization) {
         if (serialization.containsKey(polymorphic.property())) {
-            String msg = ("Polymorphic serialization for type '%s' failed. The type contains a " +
-                          "configuration element with name '%s' but that name is " +
-                          "used by the @Polymorphic property.")
-                    .formatted(polymorphicType.getName(), polymorphic.property());
+            String msg = String.format("Polymorphic serialization for type '%s' failed. The type contains a " +
+                    "configuration element with name '%s' but that name is " +
+                    "used by the @Polymorphic property.", polymorphicType.getName(), polymorphic.property());
             throw new ConfigurationException(msg);
         }
     }
@@ -103,11 +100,11 @@ final class PolymorphicSerializer implements Serializer<Object, Map<?, ?>> {
     public Object deserialize(Map<?, ?> element) {
         requirePropertyPresent(element);
 
-        final var typeIdentifier = element.get(polymorphic.property());
+        final Object typeIdentifier = element.get(polymorphic.property());
         requireTypeIdentifierString(typeIdentifier);
 
-        final var type = getTypeByTypeIdentifier((String) typeIdentifier);
-        final var serializer = TypeSerializer.newSerializerFor(type, context.properties());
+        final Class<?> type = getTypeByTypeIdentifier((String) typeIdentifier);
+        final TypeSerializer<?, ?> serializer = TypeSerializer.newSerializerFor(type, context.properties());
         return serializer.deserialize(element);
     }
 
@@ -120,9 +117,8 @@ final class PolymorphicSerializer implements Serializer<Object, Map<?, ?>> {
         try {
             return Reflect.getClassByName(className);
         } catch (RuntimeException e) {
-            String msg = ("Polymorphic deserialization for type '%s' failed. " +
-                          "The class '%s' does not exist.")
-                    .formatted(polymorphicType.getName(), className);
+            String msg = String.format("Polymorphic deserialization for type '%s' failed. The class '%s' does not exist.",
+                    polymorphicType.getName(), className);
             throw new ConfigurationException(msg, e);
         }
     }
@@ -130,30 +126,19 @@ final class PolymorphicSerializer implements Serializer<Object, Map<?, ?>> {
     private void requirePropertyPresent(Map<?, ?> element) {
         if (element.get(polymorphic.property()) != null)
             return;
-        String msg = """
-                     Polymorphic deserialization for type '%s' failed. \
-                     The property '%s' which holds the type is missing. \
-                     Value to be deserialized:
-                     %s\
-                     """
-                .formatted(
-                        polymorphicType.getName(),
-                        polymorphic.property(),
-                        element
-                );
+        String msg = String.format("Polymorphic deserialization for type '%s' failed.\n" +
+                "The property '%s' which holds the type is missing.\n" +
+                "Value to be deserialized:\n" +
+                "%s", polymorphicType.getName(), polymorphic.property(), element);
         throw new ConfigurationException(msg);
     }
 
     private void requireTypeIdentifierString(Object typeIdentifier) {
         if (typeIdentifier instanceof String)
             return;
-        String msg = ("Polymorphic deserialization for type '%s' failed. The type identifier '%s' " +
-                      "which should hold the type is not a string but of type '%s'.")
-                .formatted(
-                        polymorphicType.getName(),
-                        typeIdentifier,
-                        typeIdentifier.getClass().getName()
-                );
+        String msg = String.format("Polymorphic deserialization for type '%s' failed. The type identifier '%s' " +
+                "which should hold the type is not a string but of type '%s'.",
+                polymorphicType.getName(), typeIdentifier, typeIdentifier.getClass().getName());
         throw new ConfigurationException(msg);
     }
 
